tests/analyze/recursive-let/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Name `f` is not defined.
> 6 | 			f (n - 1)
         ^

error: Type mismatch: expected `int -> 'w`, but found `?`.
> 6 | 			f (n - 1)
         ^^^^^^^^^

